--- a/lab01_intro_to_coding/exercises/index.html
+++ b/lab01_intro_to_coding/exercises/index.html
@@ -17,9 +17,10 @@
     </style>
   </head>
   <body>
+    <button id="button">Add element</button>
     <div class="viz">
       <div class="rectangle"></div>
     </div>
   </body>
-  <script src="./ex1_data_structures.js"></script>
+  <script src="./ex3_dom_manipulation.js"></script>
 </html>
