--- a/lab05_images/d3_image_display/index.html
+++ b/lab05_images/d3_image_display/index.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <meta charset="UTF-8" />
-    <title>d3 Image Display</title>
+    <title>Art Gallery</title>
 
     <style type="text/css">
       *{
